render key weather data in the DOM

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 </head>
 <body>
     <header>how's the weather?</header>
-    <main></main>
+    <main>
+        <div class="search"></div>
+        <div class="weather">
+            <div class="place"></div>
+            <div class="description"></div>
+            <div class="temp"></div>
+            <div class="high-temp"></div>
+            <div class="low-temp"></div>
+            
+        </div>
+    </main>
     <footer></footer>
 </body>
 </html>
