continue styling search form

--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
     <div class="main">
         <div class="search">
             <form class="search-form" action="GET">
-                <div class="title">enter your location:</div>
-                <label for="city">city:</label>
-                <input type="text" name="city" id="city"></input>
-                <label for="country">country:</label>
-                <input type="text" name="country" id="country"></input>
-                <button type="submit">show weather report</button>
+                <div class="title">enter your location</div>
+                <div class="city">
+                    <label for="city">city:</label>
+                    <input type="text" name="city" id="city"></input>
+                </div>
+                <div class="country">
+                    <label for="country">country:</label>
+                    <input type="text" name="country" id="country"></input>
+                </div>
+                <button type="submit">how's the weather?</button>
             </form>
         </div>
         <div class="weather hide">
