--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>how's the weather?</header>
     <div class="main">
-        <div class="search">
+        <div class="search hide">
             <form class="search-form" action="GET">
                 <div class="title">enter your location</div>
                 <div class="city">
@@ -25,7 +25,7 @@
                 <button type="submit">how's the weather?</button>
             </form>
         </div>
-        <div class="weather hide">
+        <div class="weather">
             <div class="place"></div>
             <div class="description"></div>
             <div class="temp"></div>
