--- a/index.html
+++ b/index.html
@@ -29,10 +29,21 @@
             <div class="place"></div>
             <div class="description"></div>
             <div class="temp"></div>
-            <div class="high-temp"></div>
-            <div class="low-temp"></div>
+            <div class="high-low">
+                <span class="high-temp"></span> // <span class="low-temp"></span>
+            </div>
         </div>
     </div>
-    <footer></footer>
+    <footer>
+        <div class="block-1"></div>
+        <div class="block-2"></div>
+        <div class="block-3"></div>
+        <div class="block-4"></div>
+        <div class="block-5"></div>
+        <div class="block-6"></div>
+        <div class="block-7"></div>
+        <div class="block-8"></div>
+        <div class="block-9"></div>
+    </footer>
 </body>
 </html>
