design changes incl new custom font
also removed borders around page elements -- replaced with subtle drop
shadow

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>how's the weather?</header>
+    <header>how<span class="apostrophe">'</span>s the weather?</header>
     <div class="main">
         <div class="search hide">
             <form class="search-form" action="GET">
