style search form, begin working on form submit fn

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>how<span class="apostrophe">'</span>s the weather?</header>
     <div class="main">
-        <div class="search hide">
+        <div class="search">
             <form class="search-form" action="GET">
                 <div class="title">enter your location</div>
                 <div class="city">
@@ -22,10 +22,10 @@
                     <label for="country">country:</label>
                     <input type="text" name="country" id="country"></input>
                 </div>
-                <button type="submit">how's the weather?</button>
+                <button type="submit">search</button>
             </form>
         </div>
-        <div class="weather">
+        <div class="weather hide">
             <div class="place"></div>
             <div class="description"></div>
             <div class="temp"></div>
