link up form submit with getData function
also render error message on page if the search is unsuccessful

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="title">enter your location</div>
                 <div class="city">
                     <label for="city">city:</label>
-                    <input type="text" name="city" id="city"></input>
+                    <input type="text" name="city" id="city" required></input>
                 </div>
                 <div class="country">
                     <label for="country">country:</label>
@@ -30,7 +30,7 @@
             <div class="description"></div>
             <div class="temp"></div>
             <div class="high-low">
-                <span class="high-temp"></span> // <span class="low-temp"></span>
+                <span class="high-temp"></span><span class="low-temp"></span>
             </div>
         </div>
     </div>
