add a 'search again' button

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div class="high-low">
                 <span class="high-temp"></span><span class="low-temp"></span>
             </div>
+            <button class="search-again">search again</button>
         </div>
     </div>
     <footer>
