improve margins/spacing, position buttons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="main">
         <div class="search">
             <form class="search-form" action="GET">
-                <div class="title">enter your location</div>
+                <div class="title">enter a location:</div>
                 <div class="city">
                     <label for="city">city:</label>
                     <input type="text" name="city" id="city" required></input>
