--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>how's the weather? | sean stephen brian</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/favicon.png">
 </head>
 <body>
     <header>
